k8s/dev/media-ingress/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - media-api.dev.afehrpt.com
    - user-api.dev.afehrpt.com
    - tags-api.dev.afehrpt.com
    secretName: media-ingress-tls
  rules:
  - host: "media-api.dev.afehrpt.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: media-svc
            port:
              number: 80
  - host: "user-api.dev.afehrpt.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 80
  - host: "tags-api.dev.afehrpt.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: tags-svc
            port:
              number: 80
